{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 21,
  "lineage": "12e397d9-3a86-9c14-b9a3-2d83f5d65083",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lapcam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312330126221:internet-gateway/igw-0147d2830accc6c45",
            "id": "igw-0147d2830accc6c45",
            "owner_id": "312330126221",
            "tags": {
              "Name": "lapcam-igw"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "terraform",
              "Name": "lapcam-igw",
              "Project": "LapCam"
            },
            "vpc_id": "vpc-0c598fd421c8aa172"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lapcam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lapcam_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312330126221:route-table/rtb-078e887abd2460bd4",
            "id": "rtb-078e887abd2460bd4",
            "owner_id": "312330126221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0147d2830accc6c45",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lapcam-public-rt"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "terraform",
              "Name": "lapcam-public-rt",
              "Project": "LapCam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c598fd421c8aa172"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lapcam",
            "aws_vpc.lapcam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lapcam_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abcb7a02331a13d0",
            "route_table_id": "rtb-078e887abd2460bd4",
            "subnet_id": "subnet-0138b76e257c0c5c5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.lapcam",
            "aws_route_table.lapcam_public",
            "aws_subnet.lapcam_public",
            "aws_vpc.lapcam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lapcam_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312330126221:security-group/sg-040f8beef35498336",
            "description": "Security group for LapCam server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040f8beef35498336",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS for Web UI and WebRTC signaling",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access (restrict in production)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WebRTC media traffic (TCP)",
                "from_port": 10000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WebRTC media traffic (UDP)",
                "from_port": 10000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 10100
              }
            ],
            "name": "lapcam-server-sg",
            "name_prefix": "",
            "owner_id": "312330126221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lapcam-server-sg"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "terraform",
              "Name": "lapcam-server-sg",
              "Project": "LapCam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c598fd421c8aa172"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lapcam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lapcam_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312330126221:subnet/subnet-0138b76e257c0c5c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0138b76e257c0c5c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312330126221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lapcam-public-subnet"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "terraform",
              "Name": "lapcam-public-subnet",
              "Project": "LapCam"
            },
            "vpc_id": "vpc-0c598fd421c8aa172"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.lapcam"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lapcam",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:312330126221:vpc/vpc-0c598fd421c8aa172",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06de108f2da84a466",
            "default_route_table_id": "rtb-0f7c5382a982c2940",
            "default_security_group_id": "sg-03c5eb0bb161d64a4",
            "dhcp_options_id": "dopt-0fc942a443d4b6905",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c598fd421c8aa172",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7c5382a982c2940",
            "owner_id": "312330126221",
            "tags": {
              "Name": "lapcam-vpc"
            },
            "tags_all": {
              "Environment": "personal",
              "ManagedBy": "terraform",
              "Name": "lapcam-vpc",
              "Project": "LapCam"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}